# CMake-ProjectTemplate

./: CMakeLists.txt  CMakeSettings.json  README.md
setup/: ProjectSetup.cmake
src/: CMakeLists.txt
src/core/: CMakeLists.txt  app.cpp  app.cppm  app.impl.cppm  core.cpp  core.cppm  scope_guard.cppm
src/core/assert/: CMakeLists.txt  assert.cpp  assert.h
src/core/log/: CMakeLists.txt  log.cpp  log.h
src/gui/: CMakeLists.txt  app.cpp  app.cppm  context.cpp  context.welcome.cpp  context.welcome.cppm  imgui_ext.cpp  imgui_ext.h  vk_engine.cpp  vk_engine.cppm  vk_init.cppm  vk_types.h  vkbootstrap_wrapper.h
src/guiapp/: CMakeLists.txt  component.cppm  context.cppm  context.welcome.cppm  gui.cppm  vk_engine.impl.cppm
